<resources>
    <string name="app_name">Micro Electronics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kaushi Rajapakshe</string>
    <string name="nav_header_subtitle">kaushi.rajapakshe@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="splash_text">Micro Electronics</string>
    <string name="logo">Micro Electronics</string>
    <string name="home">Home</string>
    <string name="my_order">My Order</string>
    <string name="my_account">My Account</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="my_wish_list">My Wish List</string>
    <string name="space" />
    <string name="about_us">About Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="setting">Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="address_book">Address Book</string>
    <string name="currency">Currency</string>
    <string name="language">Add Item</string>
    <string name="change_password">Change Password</string>
    <string name="check_new_version">Check New Version</string>
    <string name="your_shopping">Your Shopping</string>
    <string name="cart_is">cart is</string>
    <string name="empty">empty</string>
    <string name="no_wishlist">No Wishlist</string>
    <string name="buy">Buy</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="amount">Amount</string>
    <string name="order_completed">Order Completed</string>
    <string name="states">States</string>
    <string name="order_number">Order Number</string>
    <string name="go_shopping">Go Shopping</string>
    <string name="micro">Micro Electronics is an electric shop located in Matara. It was started in the month of September 2017. And also, it is one of the leading and fast-growing business in that area</string>
    <string name="item_number">Item Number</string>
    <string name="ishara">Ishara</string>
    <string name="name">Name</string>
    <string name="title_activity_my1">my1</string>
    <string name="title">Sign In</string>
    <string name="title1">Register</string>
    <string name="title3">My Account</string>
    <string name="or">OR</string>
    <string name="no_account">No Account?</string>
    <string name="by_clicking_this_button_you_agree_to_our_policy">By clicking this button,you agree to our policy</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="register_now">Register Now</string>
    <string name="is_this_account_is_not_usefull">Is this account is not usefull?</string>
    <string name="create_an_account">Create an account</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="delete_account">Delete Account</string>
    <string name="save_changes">Save Changes</string>
    <string name="micro_electronics">Micro Electronics</string>
    <string name="title_activity_sign__up">Sign_Up</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_registration">Registration</string>
    <string name="page_title">Add Items</string>
    <string name="text_name1">Name</string>
    <string name="text_name2">Price(LKR)</string>
    <string name="text_name3">Category</string>
    <string name="text_name4">Image</string>
    <string name="text_name5">Description</string>
    <string name="text_item_details1">Description</string>

    <string name="edit_text_price">Rs.</string>

    <string name="button_add">Add</string>
    <string name="button_view">View</string>
    <string name="button_chooseImage">Choose Image</string>
    <string name="appName">Micro Electronics</string>

    <string name="category1">Mobile phones</string>
    <string name="category2">Laptops</string>
    <string name="color">Color</string>
    <string name="black">Black</string>
    <string name="memory">Memory</string>
    <string name="sim">SIM</string>
    <string name="dual_sim">Dual SIM</string>
    <string name="ram">RAM</string>
    <string name="stores">Stores</string>
    <string name="price">Price</string>

</resources>
