<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/sign">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_marginTop="-39dp"
        android:layout_toEndOf="@+id/textView16"
        android:text="@string/register_now"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />


    <Button
        android:id="@+id/button"
        android:layout_width="101dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="214dp"
        android:background="@color/colorPrimaryDark"
        android:shadowColor="#555457"
        android:text="Sign In"
        android:textColor="@android:color/background_light" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="243dp"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="241dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="212dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@android:color/background_dark"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/Username"
        android:layout_marginTop="184dp"
        android:text="@string/password"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/Username"
        android:layout_marginTop="113dp"
        android:text="Username"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:text="@string/by_clicking_this_button_you_agree_to_our_policy"
        android:textColor="#7e7d7d" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView"
        android:layout_marginStart="107dp"
        android:text="@string/no_account"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="151dp"
        android:text="@string/or"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button7"
        android:layout_width="56dp"
        android:layout_height="51dp"
        android:onClick="browser3"

        android:layout_alignEnd="@+id/Username"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="85dp"
        android:background="@drawable/google" />

    <Button
        android:id="@+id/button8"
        android:layout_width="56dp"
        android:layout_height="51dp"
        android:onClick="browser1"
        android:layout_alignStart="@+id/Username"
        android:layout_alignTop="@+id/button7"
        android:background="@drawable/fb" />

    <Button
        android:id="@+id/button10"
        android:layout_width="56dp"
        android:layout_height="51dp"
        android:onClick="browser2"

        android:layout_alignTop="@+id/button7"
        android:layout_centerHorizontal="true"
        android:background="@drawable/insta" />

</RelativeLayout>